<resources>
    <string name="app_name">ColorMeCrazy</string>

    <string name="splash_text">Unisex Salon &#38; parlour</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>

    <string name="text1">text 1</string>
    <string name="text2">text 2</string>

    <string name="login_text">LOGIN</string>
    <string name="or">or</string>

    <string name="profile">Profile</string>
    <string name="memebership">Member Ship</string>
    <string name="branches">Branches</string>
    <string name="offers">Offers</string>
    <string name="seat_availability">Seat Availability</string>
    <string name="about_us">About us</string>

    <string name="favourite_icon">Favourite</string>
    <string name="my_order_icon">My Orders</string>
    <string name="history_icon">History</string>
    <string name="today_spl_icon">Today Special</string>
    <string name="offer_icon">Offers</string>
    <string name="feedback_icon">Feedback</string>
    <string name="about_us_icon">About us</string>
    <string name="price">Total : 0.0</string>
    <string name="place_order">Place Order</string>
    <string name="update_item">Update Item</string>
    <string name="category">Category List</string>


    <string name="member_ship">Membership Form</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="dob">DOB</string>
    <string name="e_mail">E-Mail</string>
    <string name="sex">Sex</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="transegender">Transgender</string>
    <string name="maritalstatus">Martial Status</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="Address">Address</string>
    <string name="first_address_line">Enter first address line</string>
    <string name="second_address_line">Enter second address line</string>
    <string name="location">Location</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="occupation">Occupation</string>
    <string name="upload_image">Upload Your Profile Image</string>
    <string name="upload_image_text">Upload Image</string>

    <string name="mobile_no">Mobile Number</string>
    <string name="category_fragment">Category</string>
    <string name="hint"><font size="1">Enter Your Phone Number :</font></string>


</resources>
