<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.nickteck.colormecrazy.fragment.ContentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_layout"
        android:orientation="horizontal"
        android:id="@+id/ldtSlideShow">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/slider2"/>
            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="bottom"
                android:padding="10dip"
                app:centered="true"
                app:fillColor="#ff0099cc"
                app:pageColor="#fff"
                app:snap="false" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ldtSlideShow"
        android:id="@+id/ldtStatus"
        android:orientation="horizontal">
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/dash_board_bg"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/ldtStatus"
        android:background="@color/dash_board_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="@dimen/layout_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height"
                        android:gravity="center"
                        android:background="@color/profile_bg">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"

                            android:src="@mipmap/ic_profile" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:background="@color/white"
                            android:textColor="@color/black"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/profile"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/layout_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/member_ship"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height"
                        android:gravity="center"
                        android:background="@color/member_bg">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_member" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:background="@color/white"
                            android:textColor="@color/black"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/memebership"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/layout_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height"
                        android:gravity="center"
                        android:background="@color/branch_bg">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_branch" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:background="@color/white"
                            android:textColor="@color/black"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/branches"/>

                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="@dimen/layout_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height"
                        android:gravity="center"
                        android:background="@color/offers_bg">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_offer" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:background="@color/white"
                            android:textColor="@color/black"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/offers"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/layout_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height"
                        android:gravity="center"
                        android:background="@color/available_bg">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_seat" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:background="@color/white"
                            android:textColor="@color/black"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/seat_availability"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/layout_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height"
                        android:gravity="center"
                        android:background="@color/about_bg">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_about" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:background="@color/white"
                            android:textColor="@color/black"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/about_us"/>

                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>








        </LinearLayout>

    </LinearLayout>





</RelativeLayout>
